# dlib_sem_seg

./: CMakeLists.txt  README.md
include/: dfd_net_v14.h  dnn_sem_seg.h  dnn_sem_seg_net_ex.h
src/: dnn_semantic_segmentation_train_ex.cpp
